# football_session_management_bot

./: .gitignore  README.md  __init__.py  docker-compose.yml  logging.toml  main.py  mainv2.py  mainv3.py  pyproject.toml  utility.py
constant/: general.py  user.py
repositories/: crud.py  database.py  models.py
rules/: agent_rules.mdc
scripts/: bale.py  cleanup.py  init_db.py
src/: main.py  main2.py  main3.py
src/repositories/: models.py
user_flow/: admin.py  user.py
utils/: dependency.py
